# nntoolkit

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  model.tar  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
data/: README.md
docs/: Makefile
docs/source/: activation_functions.rst  conf.py  create.rst  data-format.rst  development.rst  evaluate.rst  index.rst  installation.rst  mlps.rst  model-format.rst  test.rst  train.rst  utils.rst
examples/: input.vec
nntoolkit/: __init__.py  activation_functions.py  bgd.py  cli.py  create.py  evaluate.py  nntoolkit.py  test.py  train.py  utils.py
nntoolkit/theano/: logistic_sgd.py  mlp.py
requirements/: ci.in  ci.txt  dev.txt  prod.txt
tests/: creation_test.py  evaluation_test.py  test_test.py  train_test.py  utils_test.py
tests/misc/: features.json  mnist-model.tar  model.tar  xor-classification.tar
tests/mnist/: README.md  get_data.py
