[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = nntoolkit

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

version = 0.2.2

description = Neural Network Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Neural Networks, Feed-Forward, NN, MLP

platforms = Linux, MacOS X, Windows

url = https://github.com/MartinThoma/nntoolkit
download_url = https://github.com/MartinThoma/nntoolkit

license = MIT

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 7 - Inactive
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Utilities

[options]
zip_safe = false
packages = find:
python_requires = >= 3.0

[options.entry_points]
console_scripts =
    nntoolkit = nntoolkit.cli:entry_point

[upload_docs]
upload-dir = docs/_build/html

[tool:pytest]
addopts = --doctest-modules --cov=./nntoolkit --cov-report html:tests/reports/coverage-html --cov-report term-missing --flake8 --ignore=docs/ --durations=3
doctest_encoding = utf-8

[pydocstyle]
ignore = D104, D413, D212, D100
match_dir = nntoolkit

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
ignore_missing_imports = True
